# filmpy

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: release.yml  tests.yml
cinemapy/: decorators.py  editor.py
cinemapy/audio/: AudioClip.py
cinemapy/audio/fx/: __init__.py  audio_fadeout.py  audio_normalize.py
cinemapy/audio/io/: preview.py
cinemapy/video/: VideoClip.py
cinemapy/video/compositing/: CompositeVideoClip.py
cinemapy/video/fx/: even_size.py  fadeout.py  margin.py  mask_or.py  painting.py  rotate.py  time_symmetrize.py
cinemapy/video/io/: bindings.py  downloader.py  ffmpeg_reader.py  ffmpeg_writer.py  gif_writers.py  html_tools.py  preview.py
scripts/: get-latest-imagemagick-win.py
src/cinemapy/: Clip.py  __init__.py  config.py  editor.py  tools.py  utils.py
src/filmpy/: Clip.py  __init__.py  config.py  decorators.py  editor.py  tools.py  utils.py
src/tests/: README.rst  conftest.py  test_AudioClips.py  test_BitmapClip.py  test_Clip.py  test_ImageSequenceClip.py  test_PR.py  test_SubtitlesClip.py  test_TextClip.py  test_VideoClip.py  test_VideoFileClip.py  test_compositing.py  test_editor.py  test_examples.py  test_ffmpeg_reader.py  test_ffmpeg_tools.py  test_ffmpeg_writer.py  test_fx.py  test_issues.py  test_tools.py  test_videotools.py
tests/: README.rst  conftest.py  test_AudioClips.py  test_BitmapClip.py  test_Clip.py  test_ImageSequenceClip.py  test_PR.py  test_TextClip.py  test_VideoClip.py  test_editor.py  test_examples.py  test_ffmpeg_reader.py  test_tools.py
(+71 files in other folders)
